--- a/android/src/main/res/layout/outgoing_call_activity.xml
+++ b/android/src/main/res/layout/outgoing_call_activity.xml
@@ -34,18 +34,10 @@
             android:layout_below="@id/call_status"/>
 
         <Button
-            android:id="@+id/toggle_camera"
+            android:id="@+id/openDoor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Toggle camera"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/call_status"/>
-
-        <Button
-            android:id="@+id/pause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pause"
+            android:text="Open door"
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"/>
 
